--- a/index.html
+++ b/index.html
@@ -1,29 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Online School</title>
-  <link rel="stylesheet" href="./css/styles.css" />
-</head>
-<body>
-  <main>
-    <header>
-      <div class="top-header">
-        <div class="phone">
-          <span>+234 812 844 8323</span>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Online School</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
+      integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <main>
+      <header>
+        <div class="top-header">
+          <div class="phone">
+            <span>+234 812 844 8323</span>
+          </div>
+
+          <div>
+            <ul class="social-icons">
+              <li class="icons">
+                <a href="http://instagram.com"
+                  ><i class="fab fa-instagram"></i
+                ></a>
+              </li>
+              <li class="icons">
+                <a href="http://twitter.com"><i class="fab fa-twitter"></i></a>
+              </li>
+              <li class="icons">
+                <a href="http://facebook.com"
+                  ><i class="fab fa-facebook"></i
+                ></a>
+              </li>
+              <li class="icons">
+                <a href="#"><i class="far fa-user"></i>Login</a>
+              </li>
+              <li class="icons"><a href="#">Register</a></li>
+            </ul>
+          </div>
         </div>
-        <div class="social">
-          
+
+        <div class="main-header">
+          <nav class="mobilenav">
+            <div class="logoandtoggle">
+            <div class="logo">
+              <img src="./img/logo-1-1.png" />
+            </div>
+            <button class="toggle-button">
+              <span class="toggle-button__line"></span>
+              <span class="toggle-button__line"></span>
+              <span class="toggle-button__line"></span>
+          </button>
+          </div>
+
+              <div class="mobilemenu">
+                <ul>
+                  <li><a href="#">home</a></li>
+                  <li><a href="#">start here</a></li>
+                  <li><a href="#">courses</a></li>
+                  <li><a href="#">projects</a></li>
+                  <li><a href="#">help</a></li>
+                  <li><a href="#">about us</a></li>
+                  <li><a href="#"><span>Enroll Now</span></a></li>
+                </ul>
+                <div class="search-container">
+                  <form action="">
+                    <input type="text" placeholder="Search.." name="search" />
+                    <button type="submit"><i class="fa fa-search"></i></button>
+                  </form>
+                </div>
+              </div>
+          </nav>
         </div>
+
+        <div class="main-banner">
+          <ul>
+            <li>
+              <div class="background">
+                <div class="overlaytext">
+                  <h1>do it yourself</h1>
+                  <p>
+                    the DIY natural Beauty Book featuring over 100 innovative
+                    recipes on Haircare, Skincare and Perfumery
+                  </p>
+                  <a href="#" class="btn">Download NOW</a>
+                  <div class="topmostoverlayimg">
+                    <div class="left_side_img">
+                      <img src="img/devices-01.png" />
+                    </div>
+                    <div class="right_side_img">
+                      <img src="./img/devices-02-1.png" />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <img src="./img/aw-creative-K-Y0CMiZFoQ-unsplash.jpg" class="img" />
+              <div class="overlay">
+                <div class="overlaytext">
+                  <h1><span>BECOME AN</span> ORGANIC Skincare FORMULA</h1>
+                  <p>
+                    Participate in our skincare enterpreneurship programme and
+                    become a boss of your own
+                  </p>
+                  <a href="#" class="btn">Learn MORE</a>
+                </div>
+              </div>
+            </li>
+
+            <li>
+              <img src="./img/photo-1506003094589-53954a26283f.jpg"  class="img"/>
+              <div class="overlay">
+                <div class="overlaytext">
+                  <h1>STUDY WITH US</h1>
+                  <p>
+                    Learn how to create high perfoermance organic skincare
+                    products that work effectively and launch a successful
+                    business
+                  </p>
+                  <a href="#" class="btn">View our courses</a>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </header>
+      <div class="welcome">
+          <h2>Welcome to Maya Organic Skincare School!</h2>
+          <div class="shortline">
+            <div class="line"></div>
+          </div>
+          <p>We are Maya Organics!!! Our school consists of professionals and 
+            top notch instructors who are cosmetic formulators, chemists, business 
+            development experts, digital branding and online marketing experts.</p>
+            <div class="mission">
+              <p>We are committed to helping you create high-quality, effective and 
+                customer-centric organic products that will set you apart in the organic skincare industry.</p>
+            </div>
+            <a href="#">LEARN MORE</a>
       </div>
-      <div class="main-header">
+      <div class="why">
+        <h2>Why choose Maya Organic Skincare School?</h2>
+        <div class="shortline">
+          <div class="line"></div>
+        </div>  
+        <div class="learn">
+          <img src="img/globe (1).png">
+          <h4>Learn Everything Online</h4>
+          <p>Study our courses online from anywhere in the world. Our courses are flexible; perfect around your busy schedules. All our learning resources caters for different learning styles that suit your timing.</p>
+        </div>
+        <div class="support">
+          <img src="img/social-care.png">
+          <h4>24/7 Customer Support</h4>
+          <p>We help our students create Unique, Ecofriendly, Luxurious Products that are effective & loved by their customers. We give detailed contact of suppliers of raw materials available in Africa & Worldwide.</p>
+        </div>
+        <div class="join">
+          <img src="./img/join.png">
+          <h4>Join over 1,500 students from 10+ countries</h4>
+          <p>Our graduates have established ORGANIC brands in every corner of the globe becoming a boss of their own!</p>
+        </div>
+        <a href="#">ENROLL NOW</a>
 
       </div>
-      <div class="main-banner">
+      <div class="courses"></div>
 
-      </div>
-    </header>
-  </main>
-</body>
+    </main>
+    <script src="script.js"></script>
+  </body>
 </html>
