update the page and add new sections

--- a/index.html
+++ b/index.html
@@ -50,38 +50,40 @@
         <div class="main-header">
           <nav class="mobilenav">
             <div class="logoandtoggle">
-            <div class="logo">
-              <img src="./img/logo-1-1.png" />
-            </div>
-            <button class="toggle-button">
-              <span class="toggle-button__line"></span>
-              <span class="toggle-button__line"></span>
-              <span class="toggle-button__line"></span>
-          </button>
-          </div>
-
-              <div class="mobilemenu">
-                <ul>
-                  <li><a href="#">home</a></li>
-                  <li><a href="#">start here</a></li>
-                  <li><a href="#">courses</a></li>
-                  <li><a href="#">projects</a></li>
-                  <li><a href="#">help</a></li>
-                  <li><a href="#">about us</a></li>
-                  <li><a href="#"><span>Enroll Now</span></a></li>
-                </ul>
-                <div class="search-container">
-                  <form action="">
-                    <input type="text" placeholder="Search.." name="search" />
-                    <button type="submit"><i class="fa fa-search"></i></button>
-                  </form>
-                </div>
+              <div class="logo">
+                <img src="./img/logo-1-1.png" />
               </div>
+              <button class="toggle-button">
+                <span class="toggle-button__line"></span>
+                <span class="toggle-button__line"></span>
+                <span class="toggle-button__line"></span>
+              </button>
+            </div>
+
+            <div class="mobilemenu">
+              <ul>
+                <li><a href="#">home</a></li>
+                <li><a href="#">start here</a></li>
+                <li><a href="#">courses</a></li>
+                <li><a href="#">projects</a></li>
+                <li><a href="#">help</a></li>
+                <li><a href="#">about us</a></li>
+                <li>
+                  <a href="#"><span>Enroll Now</span></a>
+                </li>
+              </ul>
+              <div class="search-container">
+                <form action="">
+                  <input type="text" placeholder="Search.." name="search" />
+                  <button type="submit"><i class="fa fa-search"></i></button>
+                </form>
+              </div>
+            </div>
           </nav>
         </div>
 
         <div class="main-banner">
-          <ul>
+          <!-- <ul>
             <li>
               <div class="background">
                 <div class="overlaytext">
@@ -131,48 +133,108 @@
                 </div>
               </div>
             </li>
-          </ul>
+          </ul> -->
         </div>
       </header>
       <div class="welcome">
-          <h2>Welcome to Maya Organic Skincare School!</h2>
-          <div class="shortline">
-            <div class="line"></div>
-          </div>
-          <p>We are Maya Organics!!! Our school consists of professionals and 
-            top notch instructors who are cosmetic formulators, chemists, business 
-            development experts, digital branding and online marketing experts.</p>
-            <div class="mission">
-              <p>We are committed to helping you create high-quality, effective and 
-                customer-centric organic products that will set you apart in the organic skincare industry.</p>
-            </div>
-            <a href="#">LEARN MORE</a>
-      </div>
-      <div class="why">
-        <h2>Why choose Maya Organic Skincare School?</h2>
+        <h2>Welcome to Skin Essence School!</h2>
         <div class="shortline">
-          <div class="line"></div>
-        </div>  
-        <div class="learn">
-          <img src="img/globe (1).png">
-          <h4>Learn Everything Online</h4>
-          <p>Study our courses online from anywhere in the world. Our courses are flexible; perfect around your busy schedules. All our learning resources caters for different learning styles that suit your timing.</p>
+          <!-- <div class="line"></div> -->
         </div>
-        <div class="support">
-          <img src="img/social-care.png">
-          <h4>24/7 Customer Support</h4>
-          <p>We help our students create Unique, Ecofriendly, Luxurious Products that are effective & loved by their customers. We give detailed contact of suppliers of raw materials available in Africa & Worldwide.</p>
-        </div>
-        <div class="join">
-          <img src="./img/join.png">
-          <h4>Join over 1,500 students from 10+ countries</h4>
-          <p>Our graduates have established ORGANIC brands in every corner of the globe becoming a boss of their own!</p>
-        </div>
-        <a href="#">ENROLL NOW</a>
+        <p>
+          We’re here to help you create high-performance, natural and organic
+          beauty products, for your personal use, or to go further and launch a
+          successful business anywhere in Africa and all over the globe.
+        </p>
 
+        <p>
+          Skin Essence school consists of certified tutors, well trained
+          instructors and experts in the field of organic skincare formulation,
+          chemistry, business development, digital branding and online
+          marketing.
+        </p>
+
+        <p>
+          We are prepared to help you create effective, ethical and natural
+          products that will set you apart in the organic skincare industry.
+        </p>
+        <a href="#" class="btn">LEARN MORE</a>
       </div>
-      <div class="courses"></div>
-
+      <div class="section why">
+        <h2>Why choose Skin Essence School?</h2>
+        <div class="row">
+          <div class="sect learn">
+            <img src="img/globe (1).png" />
+            <h4>Learn Everything Online</h4>
+            <p>
+              Study our courses online from anywhere in the world. Our courses
+              are flexible; perfect around your busy schedules. All our learning
+              resources caters for different learning styles that suit your
+              timing.
+            </p>
+          </div>
+          <div class="sect support">
+            <img src="img/social-care.png" />
+            <h4>24/7 Customer Support</h4>
+            <p>
+              We help our students create Unique, Ecofriendly, Luxurious
+              Products that are effective & loved by their customers. We give
+              detailed contact of suppliers of raw materials available in Africa
+              & Worldwide.
+            </p>
+          </div>
+          <div class="sect join">
+            <img src="./img/join.png" />
+            <h4>Join over 1,500 students from 10+ countries</h4>
+            <p>
+              Our graduates have established ORGANIC brands in every corner of
+              the globe becoming a boss of their own!
+            </p>
+          </div>
+        </div>
+        <a href="#" class="btn">ENROLL NOW</a>
+      </div>
+      <div class="section courses">
+        <h2>Our Courses</h2>
+        <div class="row">
+          <div class="card course-card">
+            <div class="course-img">
+              <img src="img/course-1.jpg" alt="course card image" />
+            </div>
+            <div class="course-info">
+              <h4 class="course-title">Certificate in Soap Making</h4>
+              <div class="course-price"><span class="c-price">Price:</span> <span class="amount">₦12,500</span></div>
+            </div>
+          </div>
+          <div class="card course-card">
+            <div class="course-img">
+              <img src="img/course-2.jpg" alt="course card image" />
+            </div>
+            <div class="course-info">
+              <h4 class="course-title">Certificate in Creme Making</h4>
+              <div class="course-price"><span class="c-price">Price:</span> <span class="amount">₦12,500</span></div>
+            </div>
+          </div>
+          <div class="card course-card">
+            <div class="course-img">
+              <img src="img/course-3.jpg" alt="course card image" />
+            </div>
+            <div class="course-info">
+              <h4 class="course-title">Certificate in Cosmetic Desgin</h4>
+              <div class="course-price"><span class="c-price">Price:</span> <span class="amount">₦12,500</span></div>
+            </div>
+          </div>
+          <div class="card course-card">
+            <div class="course-img">
+              <img src="img/course-4.jpg" alt="course card image" />
+            </div>
+            <div class="course-info">
+              <h4 class="course-title">Certificate in Organic Hair care products</h4>
+              <div class="course-price"><span class="c-price">Price:</span> <span class="amount">₦12,500</span></div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <script src="script.js"></script>
   </body>
