--- a/index.html
+++ b/index.html
@@ -168,10 +168,55 @@
           <h4>Join over 1,500 students from 10+ countries</h4>
           <p>Our graduates have established ORGANIC brands in every corner of the globe becoming a boss of their own!</p>
         </div>
-        <a href="#">ENROLL NOW</a>
+        <a href="#" class="btn">ENROLL NOW</a>
 
       </div>
-      <div class="courses"></div>
+      <div class="courses">
+        <h1> OUR COURSES</h1>
+        <div class="packages">
+          <div>
+            <img src="./img/1-1-450x300.jpg">
+            <div class="overbg">
+              <div class="text">
+              <h5><a href="#">Certificate in formulating organic skincare product</a></h5></div>
+              <div class="price"><span>$100,000</span>
+              <p>$40,000</p></div>
+  
+          </div>
+          </div>
+        <div>
+          <img src="./img/maya3-450x300.jpg">
+          <div class="overbg">
+            <div class="text">
+            <h5><a href="#">Certificate in Organic Hair care products</a></h5></div>
+            <div class="price"><span>$80,000</span>
+            <p>$40,000</p></div>
+
+        </div>
+        </div>
+        <div>
+          <img src="./img/4-1-450x300 (1).jpg">
+          <div class="overbg">
+            <div class="text">
+            <h5><a href="#">Beginners soap making course</a></h5></div>
+            <div class="price"><span>$30,000</span>
+            <p>$15,000</p></div>
+
+        </div>
+        </div>
+        <div>
+          <img src="./img/maya4-450x300.jpg">
+          <div class="overbg">
+            <div class="text">
+            <h5><a href="#">Certificate in preservation-free face mask and body scrubs formulation</a></h5></div>
+            <div class="price"><span>$25,000</span>
+            <p>$12,500</p></div>
+
+        </div>
+        </div>
+      </div>
+        <a href="#" class="btn">ENROLL NOW</a>
+      </div>
 
     </main>
     <script src="script.js"></script>
