break css into files for ease of use

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
       integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
       crossorigin="anonymous"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>
@@ -161,7 +165,7 @@
         <a href="#" class="btn">LEARN MORE</a>
       </div>
       <div class="section why">
-        <h2>Why choose Skin Essence School?</h2>
+        <h2 class="title">Why choose Skin Essence School?</h2>
         <div class="row">
           <div class="sect learn">
             <img src="img/globe (1).png" />
@@ -203,7 +207,10 @@
             </div>
             <div class="course-info">
               <h4 class="course-title">Certificate in Soap Making</h4>
-              <div class="course-price"><span class="c-price">Price:</span> <span class="amount">₦12,500</span></div>
+              <div class="course-price">
+                <span class="c-price">Price:</span>
+                <span class="amount">₦12,500</span>
+              </div>
             </div>
           </div>
           <div class="card course-card">
@@ -212,7 +219,10 @@
             </div>
             <div class="course-info">
               <h4 class="course-title">Certificate in Creme Making</h4>
-              <div class="course-price"><span class="c-price">Price:</span> <span class="amount">₦12,500</span></div>
+              <div class="course-price">
+                <span class="c-price">Price:</span>
+                <span class="amount">₦12,500</span>
+              </div>
             </div>
           </div>
           <div class="card course-card">
@@ -221,7 +231,10 @@
             </div>
             <div class="course-info">
               <h4 class="course-title">Certificate in Cosmetic Desgin</h4>
-              <div class="course-price"><span class="c-price">Price:</span> <span class="amount">₦12,500</span></div>
+              <div class="course-price">
+                <span class="c-price">Price:</span>
+                <span class="amount">₦12,500</span>
+              </div>
             </div>
           </div>
           <div class="card course-card">
@@ -229,11 +242,20 @@
               <img src="img/course-4.jpg" alt="course card image" />
             </div>
             <div class="course-info">
-              <h4 class="course-title">Certificate in Organic Hair care products</h4>
-              <div class="course-price"><span class="c-price">Price:</span> <span class="amount">₦12,500</span></div>
+              <h4 class="course-title">
+                Certificate in Organic Hair care products
+              </h4>
+              <div class="course-price">
+                <span class="c-price">Price:</span>
+                <span class="amount">₦12,500</span>
+              </div>
             </div>
           </div>
         </div>
+        <a href="#" class="btn">ENROLL NOW</a>
+      </div>
+      <div class="section subscribe">
+        <h2 class="title">Become a natural skincare formular</h2>
       </div>
     </main>
     <script src="script.js"></script>
