--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <main>
       <header>
-        <div class="top-header">
+        <div class="top-header res-pad">
           <div class="phone">
             <span>+234 812 844 8323</span>
           </div>
@@ -51,8 +51,8 @@
           </div>
         </div>
 
-        <div class="main-header">
-          <nav class="mobilenav">
+        <div class="main-header res-pad">
+          <nav class="mobile-web-nav">
             <div class="logoandtoggle">
               <div class="logo">
                 <img src="./img/logo-1-1.png" />
@@ -62,6 +62,19 @@
                 <span class="toggle-button__line"></span>
                 <span class="toggle-button__line"></span>
               </button>
+              <div class="web-menu">
+                <ul>
+                  <li><a href="#">home</a></li>
+                  <li><a href="#">start here</a></li>
+                  <li><a href="#">courses</a></li>
+                  <li><a href="#">projects</a></li>
+                  <li><a href="#">help</a></li>
+                  <li><a href="#">about us</a></li>
+                  <li>
+                    <a href="#"><span>Enroll Now</span></a>
+                  </li>
+                </ul>
+              </div>
             </div>
 
             <div class="mobilemenu">
@@ -140,7 +153,7 @@
           </ul> -->
         </div>
       </header>
-      <div class="welcome">
+      <div class="welcome res-pad">
         <h2>Welcome to Skin Essence School!</h2>
         <div class="shortline">
           <!-- <div class="line"></div> -->
@@ -164,7 +177,7 @@
         </p>
         <a href="#" class="btn">LEARN MORE</a>
       </div>
-      <div class="section why">
+      <div class="section why res-pad">
         <h2 class="title">Why choose Skin Essence School?</h2>
         <div class="row">
           <div class="sect learn">
@@ -198,7 +211,7 @@
         </div>
         <a href="#" class="btn">ENROLL NOW</a>
       </div>
-      <div class="section courses">
+      <div class="section courses res-pad">
         <h2>Our Courses</h2>
         <div class="row">
           <div class="card course-card">
@@ -254,7 +267,7 @@
         </div>
         <a href="#" class="btn">ENROLL NOW</a>
       </div>
-      <div class="section subscribe">
+      <div class="section subscribe res-pad">
         <h2 class="title">Become a natural skincare formular</h2>
       </div>
     </main>
