update to page ui

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                   <li><a href="#">help</a></li>
                   <li><a href="#">about us</a></li>
                   <li>
-                    <a href="#"><span>Enroll Now</span></a>
+                    <a class="nav-btn" href="#">Enroll Now</a>
                   </li>
                 </ul>
               </div>
@@ -158,23 +158,25 @@
         <div class="shortline">
           <!-- <div class="line"></div> -->
         </div>
-        <p>
-          We’re here to help you create high-performance, natural and organic
-          beauty products, for your personal use, or to go further and launch a
-          successful business anywhere in Africa and all over the globe.
-        </p>
+        <div class="center-content">
+          <p>
+            We’re here to help you create high-performance, natural and organic
+            beauty products, for your personal use, or to go further and launch
+            a successful business anywhere in Africa and all over the globe.
+          </p>
 
-        <p>
-          Skin Essence school consists of certified tutors, well trained
-          instructors and experts in the field of organic skincare formulation,
-          chemistry, business development, digital branding and online
-          marketing.
-        </p>
+          <p>
+            Skin Essence school consists of certified tutors, well trained
+            instructors and experts in the field of organic skincare
+            formulation, chemistry, business development, digital branding and
+            online marketing.
+          </p>
 
-        <p>
-          We are prepared to help you create effective, ethical and natural
-          products that will set you apart in the organic skincare industry.
-        </p>
+          <p>
+            We are prepared to help you create effective, ethical and natural
+            products that will set you apart in the organic skincare industry.
+          </p>
+        </div>
         <a href="#" class="btn">LEARN MORE</a>
       </div>
       <div class="section why res-pad">
