--- a/index.html
+++ b/index.html
@@ -235,6 +235,53 @@
           </div>
         </div>
       </div>
+      <div class="signup">
+        <h1>Become a natural skincare formulator!</h1>
+        <p>Sign up for our free newsletter and get our best product making tips, expert formulating advice and course offers…</p>
+          <form action="">
+            <div><input type="email" id="email" placeholder="Enter your E-mail"></div>
+            <a href="#">SUBSCRIBE</a>
+          </form>
+      </div>
+      <div class="benefits">
+      <div class="videoadvert">
+          
+      </div>
+      <div class="benefitlist">
+        <h1>Why should I learn how to formulate my own products?</h1>
+        <ul>
+          <li>Saves time and costly mistake, i don’t want to waste resources and want to formulate like a professional not an amateur.</li>
+          <li>To produce products tailored to my customer’s need that will sell like HOTCAKE in the skincare market.</li>
+          <li>It is my responsibility to sell products that are safe to my customers. I dont want to take chance.</li>
+          <li>It gives peace of mind knowing that my products are Gentle Natural and Handmade.</li>
+          <li>To create my own recipes and not follow others.</li>
+        </ul>
+
+      </div>
+    </div>
+    <div class="studentProject">
+      <h1>Maya Past <span>Students'</span> Projects</h1>
+      <div class="projectdemo">
+        <div class=demoimgs>
+        </div>
+        <div class="demovid">
+        </div>
+      </div>
+      <a href="#">VIEW MORE</a>
+      
+    </div>
+    <div class="store">
+      <div class="storeoverlay">
+        <div class="text">
+          <h1>SHOP ON MAYA ORGANICS STORE</h1>
+          <p>Purchase organic products from different categories such as Skincare, Hair Care, Soap, Fitness and Female Healthcare formulated by Maya Organics</p>
+          <a href="#">Start shopping</a>
+        </div>
+      </div>
+
+    </div>
+
+
     </main>
     <script src="script.js"></script>
   </body>
