--- a/index.html
+++ b/index.html
@@ -273,6 +273,6 @@
         <h2 class="title">Become a natural skincare formular</h2>
       </div>
     </main>
-    <script src="script.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
