--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
                 </ul>
               </div>
               <div class="desktopsearch-bar">
-                <button type="submit"><i class="fa fa-search"></i></button>
+                
+                <button type="submit"><i class="fa fa-search">
+                  <input type="checkbox" class="toggler">
+                </i></button>
+                
               </div>
 
             <!---hambuger toggle button-->
