overlaysearch-on-screen

--- a/index.html
+++ b/index.html
@@ -73,10 +73,20 @@
                 </ul>
               </div>
               <div class="desktopsearch-bar">
-                
+                <input type="checkbox" class="toggler">
                 <button type="submit"><i class="fa fa-search">
-                  <input type="checkbox" class="toggler">
                 </i></button>
+                <div class="outofthescreen">
+                <div>
+                  <div>
+                    <form action="">
+                      <input type="text" placeholder="type to search.." name="search" />
+                      <button type="submit"><i class="fa fa-search"></i></button>
+                    </form>
+
+                  </div>
+                </div>
+              </div>
                 
               </div>
 
