--- a/index.html
+++ b/index.html
@@ -134,9 +134,14 @@
         </div>
 
       </header>
+      <div class="topmost-whatsapp">
+        <a href="http://whatsapp.com"
+              ><i class="fab fa-whatsapp"></i>
+      </a>
+      </div>
       
         
-        <!--div class="main-banner">
+        <!---div class="maindesktop-banner">
           <div class="banner-inner text">
             <h1>STUDY WITH US</h1>
             <p>Learn how to create high perfoermance skincare products that work effectively and beceom your own Boss</p>
@@ -400,6 +405,21 @@
             <a href="http://facebook.com"
               ><i class="fab fa-facebook"></i
             ></a>
+          </li>
+          <li class="icons">
+            <a href="http://linkedin.com"
+              ><i class="fab fa-linkedin"></i>
+            </a>
+          </li>
+          <li class="icons">
+            <a href="http://youtube.com"
+              ><i class="fab fa-youtube"></i>
+            </a>
+          </li>
+          <li class="icons">
+            <a href="http://whatsapp.com"
+              ><i class="fab fa-whatsapp"></i>
+            </a>
           </li>
         </ul>
       </div>
