--- a/index.html
+++ b/index.html
@@ -61,13 +61,29 @@
               <!---desktop menu-->
               <div class="desktopmenu">
                 <ul>
-                  <li><a href="#">home</a></li>
+                  <li class="active"><a href="#">home</a></li>
                   <li><a href="#">start here</a></li>
-                  <li><a href="#">courses</a></li>
+                  <li><a href="#">courses</a>
+                    <div class="dropdownmenu1"> 
+                      <ul>
+                        <li><a href>Certificate in formulating organic..</a></li>
+                        <li><a href> Certificate organic hair care pro..</a></li>
+                        <li><a href>Beginners soap making course</a></li>
+                  
+                      </ul>
+
+                    </div>
+                  </li>
                   <li><a href="#">projects</a></li>
-                  <li><a href="#">help</a></li>
+                  <li><a href="#">help</a>
+                    <div class="dropdownmenu1"> 
+                      <ul>
+                        <li><a href>FAQ</a></li>
+                        <li><a href>Visit Our blog</a></li>
+              
+                      </ul></li>
                   <li><a href="#">about us</a></li>
-                  <li>
+                  <li >
                     <a href="#"><span>Enroll Now</span></a>
                   </li>
                 </ul>
