remove unused section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <main>
       <header>
-        <div class="top-header res-pad">
+        <div class="top-header">
           <div class="contact-info">
             <span>+234 812 844 8323</span>
             <span class="top-address"> 1a, Harvey Road, off Herbert Macaulay Way, Behind Domino's Pizza, Yaba, Lagos, Nigeria.</span>
@@ -45,14 +45,14 @@
                 ></a>
               </li>
               <li class="icons">
-                <a href="#"><i class="far fa-user"></i>Login</a>
+                <a href="#"><i class="far fa-user"></i> Login</a>
               </li>
               <li class="icons"><a href="#">Register</a></li>
             </ul>
           </div>
         </div>
 
-        <div class="main-header res-pad">
+        <div class="main-header">
           <nav class="mobile-web-nav">
             <div class="logoandtoggle">
               <div class="logo">
@@ -88,7 +88,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="desktopsearch-bar">
+              <!-- <div class="desktopsearch-bar">
                 <input type="checkbox" class="toggler">
                 <button type="submit"><i class="fa fa-search">
                 </i></button>
@@ -104,7 +104,7 @@
                 </div>
               </div>
                 
-              </div>
+              </div> -->
 
             <!---hambuger toggle button-->
               <button class="toggle-button">
@@ -165,7 +165,7 @@
           </div>
           
         </div-->
-        <div class="welcome res.pad">
+        <div class="welcome res-pad">
         <h2>Welcome to Skin Essence School!</h2>
         <div class="shortline">
           <!-- <div class="line"></div> -->
@@ -280,9 +280,6 @@
           </div>
         </div>
         <a href="#" class="btn">ENROLL NOW</a>
-      </div>
-      <div class="section subscribe res-pad">
-        <h2 class="title">Become a natural skincare formular</h2>
       </div>
       <div class="signup">
         <h1>Become a natural skincare formulator!</h1>
