update menu with links to about

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <!---desktop menu-->
               <div class="desktopmenu">
                 <ul>
-                  <li class="active"><a href="#">home</a></li>
+                  <li class="active"><a href="index.html">home</a></li>
                   <li><a href="#">start here</a></li>
                   <li><a href="#">courses</a>
                     <div class="dropdownmenu1"> 
@@ -79,7 +79,7 @@
                         <li><a href>Visit Our blog</a></li>
               
                       </ul></li>
-                  <li><a href="#">about us</a></li>
+                  <li><a href="about.html">about us</a></li>
                   <li >
                     <a href="#"><span>Enroll Now</span></a>
                   </li>
