update menu on other pages

--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
               <div class="desktopmenu">
                 <ul>
                   <li class="active"><a href="index.html">home</a></li>
-                  <li><a href="#">start here</a></li>
                   <li><a href="#">courses</a>
                     <div class="dropdownmenu1"> 
                       <ul>
@@ -71,15 +70,9 @@
 
                     </div>
                   </li>
-                  <li><a href="#">projects</a></li>
-                  <li><a href="#">help</a>
-                    <div class="dropdownmenu1"> 
-                      <ul>
-                        <li><a href>FAQ</a></li>
-                        <li><a href>Visit Our blog</a></li>
-              
-                      </ul></li>
+                  <li><a href>FAQ</a></li>
                   <li><a href="about.html">about us</a></li>
+                  <li><a href="contact.html">contact us</a></li>
                   <li >
                     <a href="#"><span>Enroll Now</span></a>
                   </li>
@@ -97,22 +90,15 @@
             <!---mobile show on mini screens-->
             <div class="mobilemenu">
               <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">start here</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="#">courses</a></li>
-                <li><a href="#">projects</a></li>
-                <li><a href="#">help</a></li>
-                <li><a href="#">about us</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="about.html">about us</a></li>
+                <li><a href="contact.html">contact us</a></li>
                 <li>
                   <a href="#"><span>Enroll Now</span></a>
                 </li>
               </ul>
-              <div class="search-container">
-                <form action="">
-                  <input type="text" placeholder="Search.." name="search" />
-                  <button type="submit"><i class="fa fa-search"></i></button>
-                </form>
-              </div>
             </div>
           </nav>
         </div>
