--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 <ul>
                   <li class="active"><a href="#">home</a></li>
                   <li><a href="#">start here</a></li>
-                  <li><a href="#">courses</a>
+                  <li><a href="course.html">courses</a>
                     <div class="dropdownmenu1"> 
                       <ul>
                         <li><a href>Certificate in formulating organic..</a></li>
@@ -99,7 +99,7 @@
               <ul>
                 <li><a href="#">home</a></li>
                 <li><a href="#">start here</a></li>
-                <li><a href="#">courses</a></li>
+                <li><a href="course.html">courses</a></li>
                 <li><a href="#">projects</a></li>
                 <li><a href="#">help</a></li>
                 <li><a href="#">about us</a></li>
