--- a/about.html
+++ b/about.html
@@ -111,7 +111,7 @@
         </div>
       </header>
       
-        <div class="about res-pad">
+        <div class="page-content res-pad">
           <div class="about-content">
             <h2>Welcome to Skin Essence School!</h2>
             <div class="center-content">
