--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
 
                     </div>
                   </li>
-                  <li><a href>FAQ</a></li>
+                  <li><a href="faq.html">FAQ</a></li>
                   <li><a href="about.html">about us</a></li>
                   <li><a href="contact.html">contact us</a></li>
                   <li >
@@ -92,7 +92,7 @@
               <ul>
                 <li><a href="index.html">home</a></li>
                 <li><a href="#">courses</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="faq.html">FAQ</a></li>
                 <li><a href="about.html">about us</a></li>
                 <li><a href="contact.html">contact us</a></li>
                 <li>
@@ -235,13 +235,11 @@
       </div>
       <div class="footer-links">
         <h4>QUICK LINKS</h4>
-        <p><a href="#">STUDENT LOGIN</a></p>
         <p><a href="#">ALL COURSES</a></p>
-        <p><a href="#">ABOUT US</a></p>
-        <p><a href="#">FAQs</a></p>
-        <p><a href="#">CONTACT US</a></p>
+        <p><a href="about.html">ABOUT US</a></p>
+        <p><a href="faq.html">FAQs</a></p>
+        <p><a href="contact.html">CONTACT US</a></p>
         <p><a href="#">OUR BLOG</a></p>
-        <p><a href="#">STAFF MAIL</a></p>
       </div>
       <div class="contact-address">
         <h4>CONTACT</h4>
