--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
                     </div>
                   </li>
-                  <li><a href>FAQ</a></li>
+                  <li><a href="faq.html">FAQ</a></li>
                   <li><a href="about.html">about us</a></li>
                   <li><a href="contact.html">contact us</a></li>
                   <li >
@@ -92,7 +92,7 @@
               <ul>
                 <li><a href="index.html">home</a></li>
                 <li><a href="#">courses</a></li>
-                <li><a href="#">FAQ</a></li>
+                <li><a href="faq.html">FAQ</a></li>
                 <li><a href="about.html">about us</a></li>
                 <li><a href="contact.html">contact us</a></li>
                 <li>
