--- a/faq.html
+++ b/faq.html
@@ -116,21 +116,21 @@
           <h2>Open <b>one</b></h2>
           <div class="tabs">
             <div class="tab">
-              <input type="radio" id="rd1" name="rd">
+              <input class="accordion-input" type="radio" id="rd1" name="rd">
               <label class="tab-label" for="rd1">Item 1</label>
               <div class="tab-content">
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos, facilis.
               </div>
             </div>
             <div class="tab">
-              <input type="radio" id="rd2" name="rd">
+              <input class="accordion-input" type="radio" id="rd2" name="rd">
               <label class="tab-label" for="rd2">Item 2</label>
               <div class="tab-content">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil, aut.
               </div>
             </div>
             <div class="tab">
-              <input type="radio" id="rd3" name="rd">
+              <input class="accordion-input" type="radio" id="rd3" name="rd">
               <label for="rd3" class="tab-close">Close others &times;</label>
             </div>
           </div>
