mobile-web update coursepage

--- a/course.html
+++ b/course.html
@@ -57,7 +57,7 @@
                     <!---desktop menu-->
                     <div class="desktopmenu">
                       <ul>
-                        <li class="active"><a href="#">home</a></li>
+                        <li class="active"><a href="index.html">home</a></li>
                         <li><a href="#">start here</a></li>
                         <li><a href="course.html">courses</a>
                           <div class="dropdownmenu1"> 
@@ -101,7 +101,7 @@
                       <li><a href="course.html">courses</a></li>
                       <li><a href="#">projects</a></li>
                       <li><a href="#">help</a></li>
-                      <li><a href="#">about us</a></li>
+                      <li><a href="about.html">about us</a></li>
                       <li>
                         <a href="#"><span>Enroll Now</span></a>
                       </li>
@@ -147,12 +147,12 @@
               </div>
               <div class="course-info">
                 <h4 class="course-title">Certificate in organic hair care products</h4>
-                <div class="offer">Maya diploma in organic hair care products teaches you how to formulate wide range of natural hair care products. At the end of this course you will understand how to formulate ....<span>read more</span>
+                <div class="offer"><p>Maya diploma in organic hair care products teaches you how to formulate wide range of natural hair care products. At the end of this course you will understand how to formulate ....<a href="#"><span>read more</span></a></p>
 
                 </div>
                 <div class="course-price">
                   <span class="c-price">₦12,500</span>
-                  <span class="amount">ENROLL</span>
+                  <a href="#"><span class="amount">ENROLL</span></a>
                 </div>
               </div>
             </div>
@@ -162,10 +162,10 @@
               </div>
               <div class="course-info">
                 <h4 class="course-title">Certificate in formulating organic skincare</h4>
-                <div class="offer"><p>This course is highly intensive, suitable for beginners and active formulators who want to gain in-depth knowledge on how to formulate from the scratch using the right equipment....read more</p></div>
+                <div class="offer"><p>This course is highly intensive, suitable for beginners and active formulators who want to gain in-depth knowledge on how to formulate from the scratch using the right equipment....<a href="#"><span>read more</span></a></p></div>
                 <div class="course-price">
-                  <span class="c-price">Price:</span>
-                  <span class="amount">₦12,500</span>
+                  <span class="c-price">12,500</span>
+                  <a href="#"><span class="amount">ENROLL</span></a>
                 </div>
               </div>
             </div>
@@ -177,12 +177,12 @@
                 <h4 class="course-title">beginners soap making course</h4>
                 <div class="offer">
                   <p>
-                    In this course,you will learn how to make beautiful, natural handmade bar soaps from the scratch using natural ingredients like moringa,neem,goat milk and coffee powder...read more
+                    In this course,you will learn how to make beautiful, natural handmade bar soaps from the scratch using natural ingredients like moringa,neem,goat milk and coffee powder...<a href="#"><span>read more</span></a>
                   </p>
                 </div>
                 <div class="course-price">
-                  <span class="c-price">Price:</span>
-                  <span class="amount">₦12,500</span>
+                  <span class="c-price">12,500</span>
+                  <a href="#"><span class="amount">ENROLL</span></a>
                 </div>
               </div>
             </div>
@@ -196,12 +196,12 @@
                 </h4>
                 <div class="offer">
                   <p>
-                    Facials mask and scrubs are in serious demand in the skincare industry, most consumers are in search of preservative free masks and scrubs.....read more
+                    Facials mask and scrubs are in serious demand in the skincare industry, most consumers are in search of preservative free masks and scrubs.....<a href="#"><span>read more</span></a>
                   </p>
                 </div>
                 <div class="course-price">
-                  <span class="c-price">Price:</span>
-                  <span class="amount">₦12,500</span>
+                  <span class="c-price">12,500</span>
+                  <a href="#"><span class="amount">ENROLL</span></a>
                 </div>
               </div>
             </div>
