--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <!---desktop menu-->
               <div class="desktopmenu">
                 <ul>
-                  <li class="active"><a href="#">home</a></li>
+                  <li class="active"><a href="index.html">home</a></li>
                   <li><a href="#">start here</a></li>
                   <li><a href="course.html">courses</a>
                     <div class="dropdownmenu1"> 
@@ -91,7 +91,7 @@
             <!---mobile show on mini screens-->
             <div class="mobilemenu">
               <ul>
-                <li><a href="#">home</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="#">start here</a></li>
                 <li><a href="course.html">Courses</a></li>
                 <li><a href="#">projects</a></li>
