--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
               <div class="desktopmenu">
                 <ul>
                   <li class="active"><a href="index.html">home</a></li>
-                  <li><a href="#">courses</a>
+                  <li><a href="course.html">courses</a>
                     <div class="dropdownmenu1"> 
                       <ul>
                         <li><a href>Certificate in formulating organic..</a></li>
@@ -91,7 +91,7 @@
             <div class="mobilemenu">
               <ul>
                 <li><a href="index.html">home</a></li>
-                <li><a href="#">courses</a></li>
+                <li><a href="course.html">Courses</a></li>
                 <li><a href="faq.html">FAQ</a></li>
                 <li><a href="about.html">about us</a></li>
                 <li><a href="contact.html">contact us</a></li>
@@ -235,7 +235,7 @@
       </div>
       <div class="footer-links">
         <h4>QUICK LINKS</h4>
-        <p><a href="#">ALL COURSES</a></p>
+        <p><a href="course.html">ALL COURSES</a></p>
         <p><a href="about.html">ABOUT US</a></p>
         <p><a href="faq.html">FAQs</a></p>
         <p><a href="contact.html">CONTACT US</a></p>
