--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
               <!---desktop menu-->
               <div class="desktopmenu">
                 <ul>
-                  <li class="active"><a href="#">home</a></li>
-                  <li><a href="#">start here</a></li>
+                  <li class="active"><a href="index.html">home</a></li>
                   <li><a href="course.html">courses</a>
                     <div class="dropdownmenu1"> 
                       <ul>
@@ -280,13 +279,11 @@
       </div>
       <div class="footer-links">
         <h4>QUICK LINKS</h4>
-        <p><a href="#">STUDENT LOGIN</a></p>
-        <p><a href="#">ALL COURSES</a></p>
-        <p><a href="#">ABOUT US</a></p>
-        <p><a href="#">FAQs</a></p>
-        <p><a href="#">CONTACT US</a></p>
+        <p><a href="course.html">ALL COURSES</a></p>
+        <p><a href="about.html">ABOUT US</a></p>
+        <p><a href="faq.html">FAQs</a></p>
+        <p><a href="contact.html">CONTACT US</a></p>
         <p><a href="#">OUR BLOG</a></p>
-        <p><a href="#">STAFF MAIL</a></p>
       </div>
       <div class="contact-address">
         <h4>CONTACT</h4>
